# linked_whisper

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.json
linked_whisper/: config.py  main.py
linked_whisper/connectors/: base.py  himalayas.py  jobicy.py  remoteok.py  remotive.py  working_nomads.py
linked_whisper/matcher/: keyword_filter.py  llm_matcher.py
linked_whisper/schema_generator/: generator.py
linked_whisper/schemas/: job.py  profile.py
linked_whisper/storage/: database.py
