[tool.poetry]
name = "linked-whisper"
version = "0.1.0"
description = "AI-powered remote job matcher using profile schema and multi-connector search"
authors = ["Edisson Mata"]
readme = "README.md"
packages = [{ include = "linked_whisper" }]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27"
pydantic = "^2"
anthropic = "^0.40"
typer = "^0.12"
aiosqlite = "^0.20"
python-dotenv = "^1.0"
eval-type-backport = "*"

[tool.poetry.scripts]
linked-whisper = "linked_whisper.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
